assets/css/app.scss
/* ... */
li.separator {
  margin-top: 1rem;
  font-weight: bold;
  list-style-type: '';
  margin-left: -0.85rem;

  &:first-child {
    display: none;
  }
}


ol.hide-bullets {
  list-style-type: none;
  padding: 0;

  time {
    width: 4em;
    display: inline-block;
  }

  a {
    width: calc(100% - 4.5em);
    display: inline-block;
    float: right;
  }

  li.separator {
    margin-left: 0;
  }

  li {
    clear: both;
  }

  &:after {
    content: ".";
    visibility: hidden;
    display: block;
    height: 0;
    clear: both;
  }
}

p {
  text-align: justify;
  margin-top: 0.6rem;
}

h5 + p {
  margin-top: 0.25rem;
}

a {
  color: #0366d6;
  text-decoration: none;
  cursor: pointer;

  &:hover {
    text-decoration: underline;
  }

  &.ref {
    font-style: italic;
    text-decoration-style: dotted;
    cursor: help;
  }
}

#impressum {
  margin-top: 2em;
  float: right;

  a {
    color: #888;
  }
}

#indicator,
#indicator-rotate {
  height: 2em;
  width: 2em;
  pointer-events: none;

  &.animate {
    // NOTE: also update timeout in map.js
    transition: linear 0.3s;
  }
}

#ping-indicator {
  background: #f47474;
  border-radius: 100%;
  width: 1em;
  height: 1em;
  border: 0.2em solid #fff;
  outline: 0.1em solid #000000a1;
  pointer-events: none;
  transition-property: opacity;
  opacity: 1;
  // keep in sync with map.js
  transition-delay: 10s;
  transition-duration: 3s;
  transition-timing-function: linear;
  margin-left: 0.5em;
  margin-top: 0.5em;
}

#indicator-loc {
  background: rgba(255, 255, 255, 0.5);
  border-radius: 0.8em;
  border: 0.2em solid #000;
  box-shadow: 0 0 0.1em 0.1em #fff;
  height: 0.8em;
  left: 50%;
  position: absolute;
  color: #000;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 0.8em;
}

#indicator-dir {
  &::before {
    content: '▴';
    font-size: 1.3em; // adjust translateY below as needed
  }

  height: 2em;
  left: 50%;
  position: relative;
  top: 0%;
  text-align: center;
  text-shadow: 0.1em 0.0em 0.1em #fff,
  0.1em -0.1em 0.1em #fff,
  -0.1em 0.0em 0.1em #fff,
  -0.1em -0.1em 0.1em #fff;
  transform: translate(-50%, -45%);
  width: 2em;
  z-index: 10;
}

img.roaddiagram {
  width: 100%;
  max-width: 25rem;
  margin: 0.8rem auto;
  display: block;
}

p.alert {
  background: #ECD0D0;
  padding: $contentPad;
  margin: 0 #{-1*$contentPad};
}

table.routing {
  border-collapse: collapse;
  border-spacing: 0;
  table-layout: fixed;
  width: calc(100% + 2*#{$contentPad});
  margin-left: -$contentPad;


  a {
    color: #000;
  }

  tr,
  td,
  th {
    padding: 0;
  }

  // this will control the size of the abstract route rendering, since it needs
  // to match in cell height for the different sub-icons to line up.
  $table-cell-height: 20px;

  td {
    height: $table-cell-height;
    white-space: nowrap;
  }

  $main-route-icon-size: 1.5em;

  // i.e. center column that displays the route
  tr:first-child td:nth-child(2) {
    // image will be set through HTML
    background-position: center bottom;
    background-repeat: no-repeat;
    background-size: auto calc(100% - #{$main-route-icon-size});
    width: 1.25*2*$table-cell-height;
    vertical-align: top;
    text-align: center;
    padding-top: 0.42em;

    .icon {
      font-size: 120%;
      width: $main-route-icon-size;
      height: $main-route-icon-size;
    }
  }

  td:first-child {
    text-align: right;
  }

  td.dir {
    opacity: 0.3;
  }

  .icon {
    margin: 0 0.2em;
  }
}

input[type=search] {
  margin-top: 0.6rem;
  box-sizing: border-box;
  width: 100%;
  padding: 0.5rem;
  border-radius: 0.2rem;
  border: 1px solid #cdc7c2;
  outline: 0;
  font-size: 16px;

  &:focus {
    border: 1px solid #3584e4;
    box-shadow: 0 0 0 1px #3584e4;
  }
}

@media (min-width: 3*$minWidth) {
  input[type=search] {
    font-size: inherit;
  }
}

div.aside {
  color: #888;
  font-style: italic;
  display: block;
}

@import "mapbox.css"

